@@ -11,6 +11,8 @@
    header.
 7. Fix 'More...', and other actions, when browsing into other roles.
 8. Combine 'Apps' and 'Radio' perl side, to fix errors when no radio items.
+9. In queue menu if item is part of an album, or multi-disc, then use sub-menu
+   for remove actions.
 
 5.9.1
 -----
